feat(plans): add response body key
