# doc/openapi.yaml
@@ -206,81 +206,86 @@ paths:
               schema:
                 type: object
                 properties:
-                  plans:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        plan_id:
-                          type: integer
-                        plan_name:
-                          type: string
-                        room_bill:
-                          type: integer
-                        min_head_count:
-                          type: integer
-                        only:
-                          type: string
-                          nullable: true
-                        room_category_type_name:
-                          type: string
-                          nullable: true
+                  message: 'Get completed.'
+                  type: object
+                  properties:
+                    plans:
+                      type: array
+                      items:
+                        type: object
+                        properties:
+                          plan_id:
+                            type: integer
+                          plan_name:
+                            type: string
+                          room_bill:
+                            type: integer
+                          min_head_count:
+                            type: integer
+                          only:
+                            type: string
+                            nullable: true
+                          room_category_type_name:
+                            type: string
+                            nullable: true
               example:
-                plans:
-                - plan_id: 0
-                  plan_name: お得な特典付きプラン
-                  room_bill: 7000
-                  min_head_count: 1
-                  only: null
-                  room_category_type_name: スタンダードツイン
-                - plan_id: 2
-                  plan_name: ディナー付きプラン
-                  room_bill: 8500
-                  min_head_count: 1
-                  only: normal
-                  room_category_type_name: null
-                - plan_id: 3
-                  plan_name: お得なプラン
-                  room_bill: 6000
-                  min_head_count: 1
-                  only: normal
-                  room_category_type_name:
-                - plan_id: 4
-                  plan_name: 素泊まり
-                  room_bill: 5500
-                  min_head_count: 1
-                  only: null
-                  room_category_type_name: シングル
-                - plan_id: 5
-                  plan_name: 出張ビジネスプラン
-                  room_bill: 7500
-                  min_head_count: 1
-                  only: null
-                  room_category_type_name: シングル
-                - plan_id: 6
-                  plan_name: エステ・マッサージプラン
-                  room_bill: 9000
-                  min_head_count: 1
-                  only: null
-                  room_category_type_name:
-                - plan_id: 7
-                  plan_name: 貸し切り露天風呂プラン
-                  room_bill: 9000
-                  min_head_count: 1
-                  only: null
-                  room_category_type_name:
-                - plan_id: 8
-                  plan_name: カップル限定プラン
-                  room_bill: 8000
-                  min_head_count: 2
-                  only: null
-                  room_category_type_name: プレミアムツイン
-                - plan_id: 9
-                  plan_name: テーマパーク優待プラン
-                  room_bill: 10000
-                  min_head_count: 1
-                  only: null
-                  room_category_type_name: null
+                message: 'Get completed.'
+                data:
+                  plans:
+                  - plan_id: 0
+                    plan_name: お得な特典付きプラン
+                    room_bill: 7000
+                    min_head_count: 1
+                    only: null
+                    room_category_type_name: スタンダードツイン
+                  - plan_id: 2
+                    plan_name: ディナー付きプラン
+                    room_bill: 8500
+                    min_head_count: 1
+                    only: normal
+                    room_category_type_name: null
+                  - plan_id: 3
+                    plan_name: お得なプラン
+                    room_bill: 6000
+                    min_head_count: 1
+                    only: normal
+                    room_category_type_name:
+                  - plan_id: 4
+                    plan_name: 素泊まり
+                    room_bill: 5500
+                    min_head_count: 1
+                    only: null
+                    room_category_type_name: シングル
+                  - plan_id: 5
+                    plan_name: 出張ビジネスプラン
+                    room_bill: 7500
+                    min_head_count: 1
+                    only: null
+                    room_category_type_name: シングル
+                  - plan_id: 6
+                    plan_name: エステ・マッサージプラン
+                    room_bill: 9000
+                    min_head_count: 1
+                    only: null
+                    room_category_type_name:
+                  - plan_id: 7
+                    plan_name: 貸し切り露天風呂プラン
+                    room_bill: 9000
+                    min_head_count: 1
+                    only: null
+                    room_category_type_name:
+                  - plan_id: 8
+                    plan_name: カップル限定プラン
+                    room_bill: 8000
+                    min_head_count: 2
+                    only: null
+                    room_category_type_name: プレミアムツイン
+                  - plan_id: 9
+                    plan_name: テーマパーク優待プラン
+                    room_bill: 10000
+                    min_head_count: 1
+                    only: null
+                    room_category_type_name: null
   /plan/{plan_id}:
     get:
       summary: 宿泊予約用に、宿泊プランの詳細を返します。未ログイン(リクエストヘッダ未設定)の場合、誰でも予約可能なプランのIDを指定すると成功します。ログイン済み(リクエストヘッダ設定済)の場合、ログインユーザーのランクに応じた予約可能プランのIDを指定すると成功します。
@@ -305,72 +310,79 @@ paths:
               schema:
                 type: object
                 properties:
-                  plan:
+                  message:
+                    type: string
+                  data:
                     type: object
                     properties:
-                      plan_id:
-                        type: integer
-                      plan_name:
-                        type: string
-                      room_bill:
-                        type: integer
-                      min_head_count:
-                        type: integer
-                      max_head_count:
-                        type: integer
-                      min_term:
-                        type: integer
-                      max_term:
-                        type: integer
-                  room_type:
-                    nullable: true
-                    type: object
-                    properties:
-                      room_type_name:
-                        type: string
-                      min_capacity:
-                        type: integer
-                      max_capacity:
-                        type: integer
-                      room_size:
-                        type: integer
-                      facilities:
-                        type: array
-                        items:
-                          type: string
-                      room_category_type_name:
-                        type: string
-                  user:
-                    nullable: true
-                    type: object
-                    properties:
-                      username:
-                        type: string
-                      tel:
-                        type: string
+                      plan:
+                        type: object
+                        properties:
+                          plan_id:
+                            type: integer
+                          plan_name:
+                            type: string
+                          room_bill:
+                            type: integer
+                          min_head_count:
+                            type: integer
+                          max_head_count:
+                            type: integer
+                          min_term:
+                            type: integer
+                          max_term:
+                            type: integer
+                      room_type:
                         nullable: true
-                      email:
-                        type: string
+                        type: object
+                        properties:
+                          room_type_name:
+                            type: string
+                          min_capacity:
+                            type: integer
+                          max_capacity:
+                            type: integer
+                          room_size:
+                            type: integer
+                          facilities:
+                            type: array
+                            items:
+                              type: string
+                          room_category_type_name:
+                            type: string
+                      user:
+                        nullable: true
+                        type: object
+                        properties:
+                          username:
+                            type: string
+                          tel:
+                            type: string
+                            nullable: true
+                          email:
+                            type: string
               example:
-                plan:
-                  plan_id: 3
-                  plan_name: お得なプラン
-                  room_bill: 6000
-                  min_head_count: 1
-                  max_head_count: 9
-                  min_term: 1
-                  max_term: 9
-                room_type:
-                  room_type_name: スタンダードツイン
-                  min_capacity: ツイン
-                  max_capacity: 1
-                  room_size: 2
-                  facilities: 18
-                  room_category_type_name: ['ユニット式バス・トイレ', '独立洗面台']
-                user:
-                  username: 松本さくら
-                  tel: null
-                  email: sakura@example.com
+                message: 'Get completed.'
+                data:
+                  plan:
+                    plan_id: 3
+                    plan_name: お得なプラン
+                    room_bill: 6000
+                    min_head_count: 1
+                    max_head_count: 9
+                    min_term: 1
+                    max_term: 9
+                  room_type:
+                    room_type_name: スタンダードツイン
+                    min_capacity: ツイン
+                    max_capacity: 1
+                    room_size: 2
+                    facilities: 18
+                    room_category_type_name: ['ユニット式バス・トイレ', '独立洗面台']
+                  user:
+                    username: 松本さくら
+                    tel: null
+                    email: sakura@example.com
         '401':
           description: 認証エラー
           content:
